syntax = "proto3";

package go.micro.srv.PostHouseImage;

service Example {
	rpc PostHouseImage(Request) returns (Response) {}
}

message Message {
	string say = 1;
}

message Request {
	string SessionId = 1;
	bytes Image = 2;
	int64 fileSize = 3;
	string fileName = 4;
	int64 HouseId = 5;
}

message Response {
	string ErrCode = 1;
	string ErrMsg = 2;
	string Url = 3;
}
